// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> matches snapshot 1`] = `
<div
  className="quia dolores quisquam aut consequatur sint provident"
>
  <div
    key="3a430a73-c9e9-4bcc-b46a-41618965ffea"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="0098deec-9184-4c94-af78-d1398f8e79c4"
    >
      sed sapiente soluta corporis commodi eaque nisi
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 2`] = `
<div>
  <div
    key="5a56bc68-096e-48d1-8d38-c97d60ec9cfc"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="8b1bb9cf-84aa-4bc3-9e8a-3928077faa28"
    >
      repellendus in dolores totam animi ipsum occaecati
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 3`] = `
<div
  className="incidunt vero quia voluptatibus consequatur provident qui"
>
  <div
    key="0132af03-3630-4d26-b58a-9ec56811db6a"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="ec685078-f1b6-41de-97e6-0957ae52e67e"
    >
      aut sunt enim rem qui hic dolore
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 4`] = `
<div>
  <div
    key="a60dc7d1-d2c9-4cbc-ac96-287134f81318"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="95c16b5f-4a15-428e-b790-fc9ded29035f"
    >
      perferendis soluta dignissimos cum non ea sed
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 5`] = `
<div
  className="facere fugiat rerum officiis assumenda nihil ad"
>
  <div
    key="23c18bab-e7d5-456c-b172-560805c773cf"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="0d4c0468-1c61-479a-931e-9fab414dfc89"
    >
      eligendi nihil porro suscipit sit eos maxime
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 6`] = `
<div
  className="molestias nisi corporis nulla officia rerum incidunt"
>
  <div
    key="a58ce7db-9a20-4251-99f0-01642ca8cc86"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="02e99def-4301-4a86-9f45-a811e5aa0be8"
    >
      dolore autem iste nesciunt doloribus reprehenderit ex
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 7`] = `
<div>
  <div
    key="3dfa9747-4b0e-4ef9-a9a9-cc23726adad1"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="a9018524-50ad-4003-84d7-153bef0e4ea2"
    >
      ut dolores qui qui architecto aliquid iure
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 8`] = `
<div
  className="qui voluptatem rerum et cumque quo sed"
>
  <div
    key="4985099f-771c-457a-b217-06b1e71168e8"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="cfd2abfc-9d23-4c40-9ccf-b6f80aa5c303"
    >
      unde ut beatae similique totam quia eum
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 9`] = `
<div>
  <div
    key="2310cbb8-a9dc-4104-905a-0f95289a49dd"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="85e3a4de-ee43-48c5-b6a8-80c81a28b8c0"
    >
      et molestiae velit sequi sapiente et voluptas
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 10`] = `
<div>
  <div
    key="4b46c898-7cbe-4428-a598-a512dfa0d251"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="1772ae4d-5455-4ab2-9eaa-ea3b79693a5c"
    >
      neque et cum minus et consequatur veritatis
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 11`] = `
<div
  className="cupiditate delectus sed vel non maiores nam"
>
  <div
    key="172f15fa-c4cb-4399-9695-7ad745eed1cd"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="85103b53-6f41-4967-a2a0-90737113c453"
    >
      magnam voluptatem fuga est et porro tempora
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 12`] = `
<div
  className="est corporis est quos nulla iste deleniti"
>
  <div
    key="4b7d451c-e68b-4cf2-a83a-65e204693f95"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="83b35d9a-e29b-46c0-aa60-5ebcc0da91d3"
    >
      earum et ut voluptates veritatis reprehenderit aperiam
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 13`] = `
<div
  className="dicta consequatur reiciendis quia sit cumque voluptatem"
>
  <div
    key="dadeb7d2-2cfe-4b3a-81df-70c9d1f9621c"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="aad2e3bf-9cc9-45ca-b2a3-af5e0813ceba"
    >
      eos fugiat voluptates omnis tenetur aut molestias
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 14`] = `
<div>
  <div
    key="78d60981-324e-4390-8fad-6a0495afa5e6"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="0862feba-485d-4472-ab35-212db05d7b36"
    >
      aut in sapiente omnis inventore quo impedit
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 15`] = `
<div>
  <div
    key="d8d22a15-3d73-42f7-a7b7-d27e9a685501"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="e90dd685-bf48-4288-8e2d-addde08df929"
    >
      exercitationem itaque consequatur ea quibusdam et et
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 16`] = `
<div>
  <div
    key="68969ca7-4af8-4643-aa2e-95bcf0adf218"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="579be267-dddb-44ce-9351-1376c89e6de9"
    >
      eaque debitis aut quibusdam aliquid deserunt inventore
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 17`] = `
<div
  className="sit facilis aperiam aliquam debitis sed aut"
>
  <div
    key="b5712194-f24a-4c47-aa9d-1dbd51127114"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="c0861539-5eff-4ecb-b33a-546014d43075"
    >
      libero debitis qui voluptas veritatis et veniam
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 18`] = `
<div
  className="hic occaecati sunt ea officia quos quisquam"
>
  <div
    key="96230e2d-5eac-4a4a-a886-959119a97ea0"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="f7e89ff6-adee-49c8-ab96-e9f37c04feac"
    >
      sit ullam voluptas qui optio temporibus nemo
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 19`] = `
<div>
  <div
    key="a5807178-f030-4ba5-8809-f176460a89be"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="c9c3818b-337e-4989-9828-e87cded28842"
    >
      omnis eum deleniti et est cum accusantium
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 20`] = `
<div>
  <div
    key="d3d2de1f-5cc3-4012-9a48-315c480e28d5"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="07fa2da1-fd86-4aa4-b9af-67daca54c1dc"
    >
      aliquid unde ad aut iste facilis a
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 21`] = `
<div>
  <div
    key="8838fdc6-fdf1-4124-b4a3-5e6412c9b74a"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="39f0fa89-f6a0-4510-821d-7b826ebc6917"
    >
      ut quasi inventore possimus voluptates excepturi temporibus
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 22`] = `
<div
  className="soluta esse voluptas dolor numquam ea dignissimos"
>
  <div
    key="09f345c2-0757-4ebd-bc66-83ff79d93501"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="4c560f90-b0ee-41f7-aa87-5063ad6d49bd"
    >
      nulla omnis natus illum ut optio sed
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 23`] = `
<div>
  <div
    key="cd6f3032-1ffe-4cc0-b226-947169bb95c9"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="5f151b8d-e60e-4605-baa5-f9f9b93f36f7"
    >
      cupiditate numquam mollitia omnis esse qui quo
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 24`] = `
<div
  className="quidem reprehenderit necessitatibus nesciunt est consectetur est"
>
  <div
    key="5d80cd7d-e396-411b-a4fc-33ac108ebbf1"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="3ff9830f-6b29-4ed9-acbb-44442834684b"
    >
      earum quia in ab adipisci ducimus laboriosam
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 25`] = `
<div>
  <div
    key="e1923bbf-589c-4d85-8d9d-fb950ce28ac2"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="7b46ad49-afa9-492f-bc94-d17b4b5e3479"
    >
      quis atque molestiae qui eum et debitis
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 26`] = `
<div
  className="natus eligendi placeat aut optio et nesciunt"
>
  <div
    key="ff234d32-cd68-4e4d-886f-8cee635f68eb"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="95f6c4c6-edbb-4cc0-8a51-eadc35a794e9"
    >
      et at et eos labore qui exercitationem
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 27`] = `
<div>
  <div
    key="4de3021a-a400-4042-98b8-6a915f9f4d20"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="8c5bcb08-1f04-46f8-a81e-fc5f9eeb9fd8"
    >
      explicabo maiores officia saepe et provident similique
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 28`] = `
<div
  className="blanditiis dicta incidunt voluptate repellendus sequi exercitationem"
>
  <div
    key="d461d2bc-e131-4673-bfb0-0d8d71a85566"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="d6df793e-67a8-4c84-9c20-a32e278c52b7"
    >
      dolore nostrum sunt voluptate aut ut est
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 29`] = `
<div>
  <div
    key="206a5b75-d54c-4142-bac4-de579ede4f91"
    name="Toggle"
    onClick={[Function]}
  >
    <span
      key="d4ca03c7-f8e7-41c8-84b3-b8b3adf974f1"
    >
      officiis pariatur voluptatem aut ab vitae eos
    </span>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 30`] = `
<div>
  <div
    key="d15f0b1b-6df1-4553-bca5-f197c7d2ff5f"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="78c9c424-b86d-4449-905d-6a1d50c06b73"
    >
      modi et molestiae similique laudantium est quod
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 31`] = `
<div>
  <div
    key="9687dfbf-442a-45e0-a7f6-4c1bb8cf934c"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="3b1a84b1-369a-4cad-a495-5bf171e2ebae"
    >
      cum reiciendis dolorem veritatis excepturi incidunt ducimus
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> matches snapshot 32`] = `
<div
  className="dolorum atque et enim aut id est"
>
  <div
    key="d6245c82-f752-423f-a300-c802678a5ffb"
    name="Toggle"
    onClick={[Function]}
  >
    <div
      key="9faf0b08-be30-4322-8247-21d5460c56f2"
    >
      sint soluta est accusamus eos est nihil
    </div>
  </div>
</div>
`;
